--- a/package.json
+++ b/package.json
@@ -5,14 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:server": "node server.js",
-    "dev:all": "concurrently \"npm run dev\" \"npm run dev:server\"",
     "build": "vite build",
-    "preview": "vite preview",
-    "start": "node server.js"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "firebase": "^10.14.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
@@ -22,7 +18,6 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
-    "concurrently": "^8.2.2",
     "vite": "^5.0.8"
   }
 }
